--- a/Ecoinformatica_nota.Rmd
+++ b/Ecoinformatica_nota.Rmd
@@ -12,9 +12,6 @@ output:
     reference_docx: Ecosistemas_template.docx
     
 csl: ecosistemas.csl
-bibliography: 
-  - references.bib
-  - knitcitations.bib
 ---
 
 
@@ -27,97 +24,19 @@ bibliography:
 > Dirección de contacto: [ecoinf.aeet@gmail.com]
 
 
+La ecología actual, como otras disciplinas científicas, tiene casi siempre un componente importante de computación. Desde un sencillo análisis estadístico de datos hasta la realización de simulaciones estocásticas complejas, casi todos los ecólogos necesitan interaccionar en mayor o menor medida con una computadora. Hasta el punto de que el perfil 'clásico' del científico como especialista en un campo muy concreto de conocimiento se está transformando en un perfil más polifacético (en forma de pi, **Fig. 1**) donde, además del conocimiento profundo de su área de investigación, se requieren habilidades de estadística y programación avanzada. 
 
-```{r knitcitations, echo=FALSE, cache = FALSE}
-library(knitcitations)
-cleanbib()   
-cite_options(citation_format = "pandoc")
-```
+![](https://jakevdp.github.io/images/pi_shaped.png)
 
+Figura 1. LEYENDA (https://jakevdp.github.io/blog/2014/08/22/hacking-academia/)
 
+Sin embargo, la formación de los ecólogos en aspectos tales como el manejo de bases de datos, análisis de datos, modelización, programación, etc. ha sido tradicionalmente muy deficiente. Esto no sólo acarrea retrasos y problemas en la ejecución de los proyectos de investigación, sino que también limita el potencial y alcance de los mismos. 
 
+Motivados por esta situación, se acaba de crear dentro de la Asociación Española de Ecología Terrestre (AEET) un nuevo grupo de trabajo sobre Ecoinformática (http://www.aeet.org/EcoInformatica_383_p.htm). Este grupo de trabajo pretende fomentar el intercambio de experiencias y conocimientos sobre cualquier aspecto relacionado con la ecoinformática (en sentido amplio, incluyendo manejo y análisis de datos, simulaciones, modelización, y programación), además de contribuir a la formación de los nuevos ecólogos en buenas prácticas y técnicas de computación que les permitan desarrollar al máximo sus proyectos de investigación. Entre los objetivos del grupo también se encuentra el de promover la ciencia abierta y reproducible. 
 
+Para contribuir a estos objetivos se prevé la organización de cursos y talleres así como simposios relacionados con la ecoinformática en los congresos de la AEET. Para el próximo congreso AEET-MEDECOS ya está aceptado un simposio sobre 'Ecoinformatics: data science brings new avenues for ecology'. Además se ha creado una cuenta de twitter (@ecoinf_aeet) y una lista de correo (https://groups.google.com/forum/#!forum/ecoinformatica_aeet) para compartir conocimientos y organizar nuevas actividades. Además existe una cuenta de correo específica para contactar con los coordinadores del grupo de trabajo: ecoinf.aeet@gmail.com
 
-
-
-
-# Referencias
-
-Aquí va la lista de referencias citadas (moverla desde el final del documento).
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-###### TABLA 1
-
-**Tabla 1**. Cada tabla debe aportar su correspondiente encabezamiento explicativo. En los Artículos de investigación, de revisión y Comunicaciones breves se aportarán los encabezamientos tanto en castellano como en inglés, en letra Arial 10 y en página independiente. Es importante que sean simples y que no superen el ancho una página DIN A4 vertical. Los originales se deben aportar en formato tabla y no en formato imagen. 
-
-**Table 1**. Table heading in English. 
-
-```{r Tabla1, results='asis', echo=FALSE, cache=FALSE}
-library("knitr")
-kable(head(iris))
-```
-
-
-
-
-
-###### PIES DE FIGURA
-
-**Figura 1**. Pie de figura 1. 
-
-**Figura 2**. Pie de figura 2.
-
-
-
-
-
-###### FIGURE LEGENDS
-
-**Figure 1**. Figure caption.
-
-**Figure 2**. Figure caption.
-
-
-
-
-
-###### FIGURA 1
-
-```{r Fig1, echo=FALSE, fig.cap="Figura 1. Esto es un ejemplo.", cache=FALSE}
-x <- rnorm(100)
-y <- jitter(x, 1000)
-plot(x, y)
-```
-
-
-
-###### FIGURA 2
-
-```{r Fig2, echo=FALSE, fig.cap="Figura 2. Segundo ejemplo", cache=FALSE}
-a <- sort(rnorm(100))
-b <- c(rep("Group Small", 35), rep("Group Big", 65))
-boxplot(a ~ b)
-```
-
-
-###### REFERENCIAS
-
-```{r write_citations, cache=FALSE, include=FALSE}
-write.bibtex(file="knitcitations.bib")
-```
-
+Desde su creación hace tan solo unos meses, el grupo de trabajo ha tenido muy buena acogida. Esperamos que cumpla una función útil para el avance de la ecología en las próximas décadas.
 
 
 
