Add reference to our ms in ecosistemas

--- a/Ecoinformatica_nota.Rmd
+++ b/Ecoinformatica_nota.Rmd
@@ -28,7 +28,7 @@ La ecología actual, como otras disciplinas científicas, tiene casi siempre un 
 
 Motivados por esta situación, se acaba de crear dentro de la Asociación Española de Ecología Terrestre (AEET) un nuevo grupo de trabajo sobre Ecoinformática (http://www.aeet.org/EcoInformatica_383_p.htm). Este grupo de trabajo pretende fomentar el intercambio de experiencias y conocimientos sobre cualquier aspecto relacionado con la ecoinformática (en sentido amplio, incluyendo manejo y análisis de datos, simulaciones, modelización, y programación), además de contribuir a la formación de los nuevos ecólogos en buenas prácticas y técnicas de computación que les permitan desarrollar al máximo sus proyectos de investigación. Entre los objetivos del grupo también se encuentra el de promover la ciencia abierta y reproducible. 
 
-Para contribuir a estos objetivos se prevé la organización de cursos y talleres así como simposios relacionados con la ecoinformática en los congresos de la AEET. Para el próximo congreso AEET-MEDECOS ya está aceptado un simposio sobre 'Ecoinformatics: data science brings new avenues for ecology'. Además se ha creado una cuenta de twitter (@ecoinf_aeet) y una lista de correo (https://groups.google.com/forum/#!forum/ecoinformatica_aeet) para compartir conocimientos y organizar nuevas actividades. Además existe una cuenta de correo específica para contactar con los coordinadores del grupo de trabajo: ecoinf.aeet@gmail.com
+Para contribuir a estos objetivos contamos con la participación de todos los interesados para organizar diferentes iniciativas o actividades. Para empezar, hemos redactado un articulo explcando qué, por qué y como hacer ciencia reproducible, que sera publicado en el numero X de la revista Ecosistemas. También se prevé la organización de cursos y talleres así como simposios relacionados con la ecoinformática en los congresos de la AEET. Por ejemplo, para el próximo congreso AEET-MEDECOS ya está aceptado un simposio sobre 'Ecoinformatics: data science brings new avenues for ecology'. Además se ha creado una cuenta de twitter (@ecoinf_aeet) y una lista de correo (https://groups.google.com/forum/#!forum/ecoinformatica_aeet) para compartir conocimientos y organizar nuevas actividades. Además existe una cuenta de correo específica para contactar con los coordinadores del grupo de trabajo: ecoinf.aeet@gmail.com
 
 Desde su creación hace tan solo unos meses, el grupo de trabajo ha tenido muy buena acogida. Esperamos que cumpla una función útil para el avance de la ecología en las próximas décadas.
 
