revised files before submission

--- a/Ecoinformatica_nota.Rmd
+++ b/Ecoinformatica_nota.Rmd
@@ -10,8 +10,6 @@ output:
     fig_width: 7.5
     highlight: null
     reference_docx: Ecosistemas_template.docx
-    
-csl: ecosistemas.csl
 ---
 
 
@@ -24,22 +22,33 @@ csl: ecosistemas.csl
 > Dirección de contacto: [ecoinf.aeet@gmail.com]
 
 
-La ecología actual, como otras disciplinas científicas, tiene casi siempre un componente importante de computación. Desde un sencillo análisis estadístico de datos hasta la realización de simulaciones estocásticas complejas, casi todos los ecólogos necesitan interaccionar en mayor o menor medida con una computadora. Hasta el punto de que el perfil 'clásico' del científico como especialista en un campo muy concreto de conocimiento se está transformando en un perfil más polifacético (en forma de pi, **Fig. 1**) donde, además del conocimiento profundo de su área de investigación, se requieren habilidades de estadística y programación avanzada. 
-
-![](https://jakevdp.github.io/images/pi_shaped.png)
-
-Figura 1. LEYENDA (https://jakevdp.github.io/blog/2014/08/22/hacking-academia/)
+La ecología actual, como otras disciplinas científicas, tiene casi siempre un componente importante de computación. Desde un sencillo análisis estadístico de datos hasta la realización de simulaciones estocásticas complejas, casi todos los ecólogos necesitan interaccionar en mayor o menor medida con una computadora. Ello implica que, junto al conocimiento profundo del área de investigación, se requieran habilidades relativamente avanzadas de estadística y programación. 
 
 Sin embargo, la formación de los ecólogos en aspectos tales como el manejo de bases de datos, análisis de datos, modelización, programación, etc. ha sido tradicionalmente muy deficiente. Esto no sólo acarrea retrasos y problemas en la ejecución de los proyectos de investigación, sino que también limita el potencial y alcance de los mismos. 
 
-Motivados por esta situación, se acaba de crear dentro de la Asociación Española de Ecología Terrestre (AEET) un nuevo grupo de trabajo sobre Ecoinformática (http://www.aeet.org/EcoInformatica_383_p.htm). Este grupo de trabajo pretende fomentar el intercambio de experiencias y conocimientos sobre cualquier aspecto relacionado con la ecoinformática (en sentido amplio, incluyendo manejo y análisis de datos, simulaciones, modelización, y programación), además de contribuir a la formación de los nuevos ecólogos en buenas prácticas y técnicas de computación que les permitan desarrollar al máximo sus proyectos de investigación. Entre los objetivos del grupo también se encuentra el de promover la ciencia abierta y reproducible. 
+Motivados por esta situación, se acaba de crear dentro de la Asociación Española de Ecología Terrestre (AEET) un nuevo grupo de trabajo sobre Ecoinformática (http://www.aeet.org/EcoInformatica_383_p.htm; **Fig. 1**). Este grupo de trabajo pretende fomentar el intercambio de experiencias y conocimientos sobre cualquier aspecto relacionado con la ecoinformática (en sentido amplio, incluyendo manejo y análisis de datos, simulaciones, modelización y programación), además de contribuir a la formación de los nuevos ecólogos en buenas prácticas y técnicas de computación que les permitan desarrollar al máximo sus proyectos de investigación. 
 
-Para contribuir a estos objetivos se prevé la organización de cursos y talleres así como simposios relacionados con la ecoinformática en los congresos de la AEET. Para el próximo congreso AEET-MEDECOS ya está aceptado un simposio sobre 'Ecoinformatics: data science brings new avenues for ecology'. Además se ha creado una cuenta de twitter (@ecoinf_aeet) y una lista de correo (https://groups.google.com/forum/#!forum/ecoinformatica_aeet) para compartir conocimientos y organizar nuevas actividades. Además existe una cuenta de correo específica para contactar con los coordinadores del grupo de trabajo: ecoinf.aeet@gmail.com
+Entre los objetivos del grupo también se encuentra el de promover la ciencia abierta y reproducible. Para ello, los actuales coordinadores hemos escrito una revisión para *Ecosistemas* sobre qué es la ciencia reproducible, por qué es importante, y cómo podemos mejorar la reproducibilidad de nuestra investigación (Rodríguez-Sánchez et al. 2016).
 
-Desde su creación hace tan solo unos meses, el grupo de trabajo ha tenido muy buena acogida. Esperamos que cumpla una función útil para el avance de la ecología en las próximas décadas.
+Además se prevé la organización de cursos y talleres así como simposios relacionados con la ecoinformática en los congresos de la AEET. Para el próximo congreso AEET-MEDECOS ya está aceptado un simposio sobre 'Ecoinformatics: data science brings new avenues for ecology'. Se ha creado una cuenta de twitter (@ecoinf_aeet) y una lista de correo (https://groups.google.com/forum/#!forum/ecoinformatica_aeet) para compartir conocimientos y organizar nuevas actividades. Además existe una cuenta de correo específica para contactar con los coordinadores del grupo de trabajo: ecoinf.aeet@gmail.com.
+
+Desde su creación hace tan solo unos meses, la iniciativa ha tenido muy buena acogida. Animamos a todos los interesados a involucrarse y participar. Esperamos que el grupo de trabajo cumpla una función útil para el avance de la ecología en las próximas décadas.
+
+
+# Referencias
+
+Rodríguez-Sánchez, F., Pérez-Luque, A.J., Bartomeus, I., Varela, S. 2016. Ciencia reproducible: qué, por qué, cómo. *Ecosistemas*, en prensa. 
+
+
+###### PIES DE FIGURA
+
+**Figura 1.** Logotipo y vías de contacto del nuevo grupo de trabajo sobre Ecoinformática.
 
 
 
+###### FIGURA 1
+
+![](imagen_grupo.jpg)
 
 
 
